Add API call metrics and cart retrieval

--- a/shop-ui/index.html
+++ b/shop-ui/index.html
@@ -12,6 +12,7 @@
         <nav>
             <button id="homeBtn">Home</button>
             <button id="cartBtn">Cart (<span id="cartCount">0</span>)</button>
+            <button id="statsBtn">API Calls</button>
             <span id="authSection">
                 <button id="loginBtn">Login</button>
                 <button id="logoutBtn" style="display:none">Logout</button>
