--- a/shop-ui/index.html
+++ b/shop-ui/index.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Shop</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Demo Shop</h1>
-        <nav>
-            <button id="homeBtn">Home</button>
-            <button id="cartBtn">Cart (<span id="cartCount">0</span>)</button>
-            <button id="statsBtn">API Calls</button>
-            <span id="authSection">
-                <button id="loginBtn">Login</button>
-                <button id="logoutBtn" style="display:none">Logout</button>
-            </span>
-        </nav>
+    <header class="bg-dark text-white p-3 mb-4">
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1 class="h3 mb-0">Demo Shop</h1>
+            <nav>
+                <button class="btn btn-light me-2" id="homeBtn">Home</button>
+                <button class="btn btn-light me-2" id="servicesBtn">Services</button>
+                <button class="btn btn-light me-2" id="contactBtn">Contact</button>
+                <button class="btn btn-light me-2" id="cartBtn">Cart (<span id="cartCount">0</span>)</button>
+                <button class="btn btn-light me-2" id="statsBtn">API Calls</button>
+                <span id="authSection">
+                    <button class="btn btn-success me-2" id="loginBtn">Login</button>
+                    <button class="btn btn-danger me-2" id="logoutBtn" style="display:none">Logout</button>
+                </span>
+            </nav>
+        </div>
     </header>
 
-    <main id="content"></main>
+    <main class="container" id="content"></main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
