--- a/shop-ui/index.html
+++ b/shop-ui/index.html
@@ -29,8 +29,10 @@
     </header>
 
     <main class="container" id="content"></main>
+    <div id="message" class="alert alert-success position-fixed top-0 end-0 p-2 m-2" style="display:none; z-index:1000"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
