--- a/shop-ui/index.html
+++ b/shop-ui/index.html
@@ -19,7 +19,8 @@
                     <button class="btn btn-light me-2" id="contactBtn">Contact</button>
                     <button class="btn btn-light me-2" id="cartBtn">Cart (<span id="cartCount">0</span>)</button>
                     <button class="btn btn-light me-2" id="statsBtn">API Calls</button>
-                    <span id="authSection">
+                    <span id="authSection" class="d-flex align-items-center">
+                        <span id="userStatus" class="navbar-text text-white me-2" style="display:none"></span>
                         <button class="btn btn-success me-2" id="loginBtn">Login</button>
                         <button class="btn btn-danger me-2" id="logoutBtn" style="display:none">Logout</button>
                     </span>
