Add user activity and data exfiltration demos

--- a/shop-ui/index.html
+++ b/shop-ui/index.html
@@ -19,6 +19,7 @@
                     <button class="btn btn-light me-2" id="contactBtn">Contact</button>
                     <button class="btn btn-light me-2" id="cartBtn">Cart (<span id="cartCount">0</span>)</button>
                     <button class="btn btn-light me-2" id="statsBtn">API Calls</button>
+                    <button class="btn btn-light me-2" id="activityBtn">Activity Log</button>
                     <span id="authSection">
                         <button class="btn btn-success me-2" id="loginBtn">Login</button>
                         <button class="btn btn-danger me-2" id="logoutBtn" style="display:none">Logout</button>
