feat(shop-ui): improve layout with cards and bootstrap classes

--- a/shop-ui/index.html
+++ b/shop-ui/index.html
@@ -11,7 +11,9 @@
     <header class="mb-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <span class="navbar-brand">Demo Shop</span>
+                <a class="navbar-brand brand" href="/">
+                  <span class="brand-mark"></span> Demo Shop
+                </a>
                 <div class="d-flex">
                     <button class="btn btn-light me-2" id="homeBtn">Home</button>
                     <button class="btn btn-light me-2" id="aboutBtn">About</button>
@@ -28,7 +30,7 @@
         </nav>
     </header>
 
-    <main class="container" id="content"></main>
+    <main class="container stack" id="content"></main>
     <div id="message" class="alert alert-success position-fixed top-0 end-0 p-2 m-2" style="display:none; z-index:1000"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
